# vapoursynth-fftspectrum-rs

./: .gitignore  Cargo.toml  README.md  clippy.toml  devenv.nix  hatch_build.py  pyproject.toml
.github/workflows/: build-release-binaries.yml  ci.yml  publish.yml
src/: lib.rs
