[project]
name = "fftspectrum_rs"
version = "1.0.12"
description = "A faster FFT spectrum VapourSynth plugin."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.md"]
requires-python = ">=3.12"

dependencies = ["vapoursynth>=74"]

[build-system]
requires = ["hatchling==1.29.0", "packaging==26.2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["vapoursynth/plugins/fftspectrum_rs"]
artifacts = [
    "vapoursynth/plugins/fftspectrum_rs/*.dylib",
    "vapoursynth/plugins/fftspectrum_rs/*.so",
    "vapoursynth/plugins/fftspectrum_rs/*.dll",
    "vapoursynth/plugins/fftspectrum_rs/manifest.vs",
]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.cibuildwheel]
build = "cp312-*"     # Only need to target the minimum Python version.
skip = [
    "*-musllinux_*",  # musl targets do not support cdylib by design.
    "*-win32",        # Not supported by VapourSynth.
]

[tool.cibuildwheel.macos.environment]
# Rust's minimum macOS target is 10.12.
MACOSX_DEPLOYMENT_TARGET = "10.12"
